# RT_practic

./: .gitignore  Bot_2  CMakeLists.txt  ControlSystem.cpp  ControlSystem.h  FooCmdReciver.cpp  FooCmdReciver.h  FooEngine.h  Mqtt.cpp  README.md  Source.cpp  arm-toolchain.cmake
Design/: CMakeLists.txt  class_diagram_2_0.puml  sequences_diagram.puml  use_case.puml  КТС.txt  Конечный автомат.puml  ТЗ.doc  баклог.xlsx
ENGINE/: AEngine.cpp  CMakeLists.txt  Engine_fbt.cpp  Engine_fbt.h  MainEngine.cpp  MainEngine.h  Motor.h
OPC_Client/: CMakeLists.txt  OPC_Client_fbt.cpp  OPC_Client_fbt.h  open62541.h
RP_proj/: .project  MANIFEST.MF  RP_proj.sys
RP_proj/Type Library/: Engine.fbt  OPC_Client.fbt  RP_MOTOR.fbt
mqtt_build/: Bot_2  CMakeCache.txt  Makefile  cmake_install.cmake
mqtt_build/robot_lib/: Makefile  cmake_install.cmake
mqtt_build/robot_lib/include/Mqtt/: Makefile  cmake_install.cmake
robot_lib/: CMakeLists.txt
robot_lib/include/: ACmdReceiver.h  AEngine.h  ControlSystem.h  FooCmdReciver.h  MainEngine.h  Motor.h
robot_lib/include/Mqtt/: CMakeLists.txt  Faild_Mqtt.cpp  Mqtt.cpp  Mqtt.h
robot_lib/src/: ACmdReceiver.cpp  ControlSystem.cpp  FooCmdReciver.cpp  FooEngine.cpp  MainEngine.cpp  Motor.cpp
server/: My_relay.py  camera.conf  camera.py  colib.py  low_main.py  main.py  mosquitto.py  move.py  move_constants.conf  move_opc.py  opc_main.py  opc_server.py  requirements.txt  telegram.py
server/perspective_dataset/: comment
server/true_dataset/: comment
